@@ -108,6 +108,7 @@ AT_SETUP([linking libltdl without autotools])
 
 _LTDL_PROJECT_FILES([sub/ltdl])
 LT_AT_LIBTOOLIZE([--copy --ltdl=sub/ltdl])
+AT_XFAIL_IF([test no = "$ACLOCAL"])
 LT_AT_MAKE([], [CC="$CC" LIBTOOLFLAGS="$LIBTOOLFLAGS" CPPFLAGS="$CPPFLAGS" ]dnl
      [CFLAGS="$CFLAGS" LDFLAGS="$LDFLAGS" SHELL="$SHELL" MAKE="${MAKE-make}" ]dnl
      [CONFIGURE_OPTIONS="$configure_options"])
